--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
     </head>
     <body>
-        <h2>hellooooo</h2>
+        <h2>hellooooo!!!!!!!!!!!!!!!!</h2>
         <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
         <script>
           // Initialize Firebase
